[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/notebook/cell.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 0.0
content_margin_bottom = 15.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.466667 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_left = 15.0
expand_margin_right = 15.0

[node name="Cell" type="PanelContainer"]
margin_right = 775.0
margin_bottom = 382.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_right = 760.0
margin_bottom = 367.0

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
margin_right = 745.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
margin_top = 4.0
margin_right = 745.0
margin_bottom = 23.0
alignment = 2

[node name="Name" type="Label" parent="VBoxContainer/Panel/HBoxContainer"]
margin_top = 1.0
margin_right = 582.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="EditButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
visible = false
margin_left = 52.0
margin_right = 91.0
margin_bottom = 19.0
text = "Edit"

[node name="ParseButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 586.0
margin_right = 635.0
margin_bottom = 19.0
text = "Parse"

[node name="UpButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 639.0
margin_right = 660.0
margin_bottom = 19.0
text = "^"

[node name="DownButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 664.0
margin_right = 684.0
margin_bottom = 19.0
text = "v"

[node name="DeleteButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
margin_left = 688.0
margin_right = 745.0
margin_bottom = 19.0
text = "Delete"

[node name="Tree" type="RichTextLabel" parent="VBoxContainer"]
visible = false
margin_top = 31.0
margin_right = 745.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 40 )

[node name="Edit" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 745.0
margin_bottom = 367.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Enter" type="TextEdit" parent="VBoxContainer/Edit"]
margin_right = 745.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
show_line_numbers = true
highlight_all_occurrences = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="RichTextLabel" parent="VBoxContainer/Edit"]
margin_top = 254.0
margin_right = 745.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
fit_content_height = true

[node name="Use" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 23.0
margin_right = 755.0
margin_bottom = 192.0
custom_constants/separation = 10
